@@ -149,7 +149,7 @@ class Binary(BinaryMixin, Widget):
 
         self.widget = gtk.HBox(spacing=0)
         self.wid_size = gtk.Entry()
-        self.wid_size.set_width_chars(10)
+        self.wid_size.set_width_chars(self.default_width_chars)
         self.wid_size.set_alignment(1.0)
         self.wid_size.props.sensitive = False
         if self.filename and attrs.get('filename_visible'):
