@@ -401,7 +401,21 @@ class WizardDialog(Wizard, NoModal):
         return True
 
     def show(self):
-        self.dia.set_default_size(200, -1)
+        view = self.screen.current_view
+        if view.view_type == 'form':
+            expand = False
+            for name in view.get_fields():
+                widget = view[name]
+                if widget.expand:
+                    expand = True
+                    break
+        else:
+            expand = True
+        if expand:
+            width, height = self.default_size()
+        else:
+            width, height = -1, -1
+        self.dia.set_default_size(max(200, width), height)
         self.dia.show()
 
     def hide(self):
